html/css/vv.css
/* $Id$ */

@import "include/tooltip.css";

html, body
{
  color: black;
  background-color: white;
  font-family: Georgia, serif;
}

body
{
  margin: 2em 15%;
  position: relative;
}

body > h1
{
  text-align: center;
}

table {
  border-spacing: none;
}

table tr {
  vertical-align: top;
}

table td, table th {
  text-align: left;
  padding: .1em .3em;
}

table td.nr, table th.nr {
  text-align: right;
}

ol.toc {
  -moz-column-count: 3;
  column-count: 3;
}

ol.toc ~ img {
  display: block;
  margin: 2em auto;
}

div.uebersicht > h2
{
  text-align: center;
  font-variant: small-caps;
}

div.sachgruppe > h2
{
  text-align: center;
  margin: 2em auto 1em;
}

div.sachgruppe div.sachgruppe div.sachgruppe div.sachgruppe h4
{ margin-left: 1.5em; }

div.sachgruppe div.sachgruppe div.sachgruppe div.sachgruppe
div.sachgruppe h4
{ margin-left: 3em; }

div.sachgruppe div.sachgruppe div.sachgruppe div.sachgruppe
div.sachgruppe div.sachgruppe h4
{ margin-left: 4.5em; }

div.sachgruppe div.sachgruppe div.sachgruppe div.sachgruppe
div.sachgruppe div.sachgruppe div.sachgruppe h4
{ margin-left: 6em; }

div.sachgruppe div.sachgruppe div.sachgruppe div.sachgruppe
div.sachgruppe div.sachgruppe div.sachgruppe div.sachgruppe h4
{ margin-left: 7.5em; }

em.gesperrt, span.autor
{
  font-style: normal;
  letter-spacing: .3em;
}

span.schrift span.titel
{
  font-style: italic;
}

span.schrift { text-decoration: underline; }

/* korrektur */
ins { text-decoration: none; color: red; cursor: help;}
ins:before { content: "["; }
ins:after { content: "]"; }
del { display: none; }

/* scil */
abbr { cursor: help; }


span.seite
{
  display: block;
  margin: 2em 0;
  text-align: right;
}

span.seite a {
  text-decoration: none;
}

ul#seitennavigation
{

  list-style-type: none;
  display: inline;
  padding: 0;
  margin: 1em 0;
}

ul#seitennavigation:before
{
  content: "Seiten: ";
}

ul#seitennavigation li
{
  display: inline;
}

hr { width: 40%; margin: 1.5em auto; }

.veranstaltungsverweis
{
  color: #555;
  cursor: help;
}

.veranstaltungsverweis:before
{
  content: "\002197  ";
  color: #555;
  font-weight: bold;
}

div#verweis-tooltip
{
  display: none;
  position: absolute;
  width: 60%;
  padding: 1em;
  margin: 2em;
  border: 1px solid gray;
  background-color: white;
}

table.veranstaltungsliste td.semester {
  white-space: nowrap;
}

